; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread_policy.c_calculate_requested_qos_override.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread_policy.c_calculate_requested_qos_override.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.thread_qos_override* }
%struct.thread_qos_override = type { %struct.thread_qos_override*, i32 }

@qos_override_mode = common dso_local global i64 0, align 8
@QOS_OVERRIDE_MODE_IGNORE_OVERRIDE = common dso_local global i64 0, align 8
@THREAD_QOS_UNSPECIFIED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @calculate_requested_qos_override to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @calculate_requested_qos_override(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.thread_qos_override*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %6 = load i64, i64* @qos_override_mode, align 8
  %7 = load i64, i64* @QOS_OVERRIDE_MODE_IGNORE_OVERRIDE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @THREAD_QOS_UNSPECIFIED, align 4
  store i32 %10, i32* %2, align 4
  br label %30

11:                                               ; preds = %1
  %12 = load i32, i32* @THREAD_QOS_UNSPECIFIED, align 4
  store i32 %12, i32* %5, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load %struct.thread_qos_override*, %struct.thread_qos_override** %14, align 8
  store %struct.thread_qos_override* %15, %struct.thread_qos_override** %4, align 8
  br label %16

16:                                               ; preds = %19, %11
  %17 = load %struct.thread_qos_override*, %struct.thread_qos_override** %4, align 8
  %18 = icmp ne %struct.thread_qos_override* %17, null
  br i1 %18, label %19, label %28

19:                                               ; preds = %16
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.thread_qos_override*, %struct.thread_qos_override** %4, align 8
  %22 = getelementptr inbounds %struct.thread_qos_override, %struct.thread_qos_override* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @MAX(i32 %20, i32 %23)
  store i32 %24, i32* %5, align 4
  %25 = load %struct.thread_qos_override*, %struct.thread_qos_override** %4, align 8
  %26 = getelementptr inbounds %struct.thread_qos_override, %struct.thread_qos_override* %25, i32 0, i32 0
  %27 = load %struct.thread_qos_override*, %struct.thread_qos_override** %26, align 8
  store %struct.thread_qos_override* %27, %struct.thread_qos_override** %4, align 8
  br label %16

28:                                               ; preds = %16
  %29 = load i32, i32* %5, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %9
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @MAX(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
